--- a/Narrow-bilibili.user.css
+++ b/Narrow-bilibili.user.css
@@ -1,7 +1,7 @@
 /**
  * Narrow - bilibili
  * Author: Dwscdv3
- * Version: 1.1.2
+ * Version: 1.1.3
  * min-width: 600px
  */
 
@@ -11,9 +11,12 @@
     display: none !important;
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 1279px) {
 	.nav-link {
 		display: none !important;
+	}
+	.international-header {
+		min-width: unset;
 	}
 	.international-header .nav-search-box {
 		display: block !important;
@@ -34,7 +37,7 @@
 	display: none;
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 1279px) {
 	.bilibili-player-video-btn-pagelist {
 		display: block !important;
 	}
