--- a/Narrow-Google.user.css
+++ b/Narrow-Google.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Narrow - Google
 @namespace      github.com/Dwscdv3/NarrowSheet
-@version        1.0.3
+@version        1.0.4
 @description    Narrow layout support for Google. (min-width: 540px)
 @author         Dwscdv3 <dwscdv3@hotmail.com> (https://github.com/Dwscdv3)
 @homepageURL    https://github.com/Dwscdv3/NarrowSheet
@@ -55,6 +55,10 @@ div#searchform,
 		display: none;
 	}
 	
+	#tsf {
+		flex: 1;
+	}
+	
 	#tsf > div:nth-child(1) > div:first-child {
 		margin-left: 0;
 	}
@@ -66,8 +70,8 @@ div#searchform,
 	}
 	
 	#tsf > div:nth-child(1) > div:first-child {
-		width: calc(100% - 150px);
 		margin-left: 27px;
+		margin-right: 8px;
 		padding-left: 0;
 	}
 	
@@ -123,7 +127,9 @@ div#searchform,
 	
 	/* 其他用户还问了…… */
 	
-	#center_col .kp-blk {
+	#center_col .kp-blk,
+	.kno-kp.mnr-c.g > div:last-child,
+	.g-blk.g > div:last-child {
 		max-width: 600px;
 		width: unset;
 	}
@@ -141,7 +147,6 @@ div#searchform,
 	
 	#hdtbMenus {
 		padding-right: 20px;
-		box-sizing: border-box;
 	}
 	
 	.hdtb-mn-o {
@@ -179,6 +184,10 @@ div#searchform,
 	
 	#hdtb-msb > div:first-child > div:first-child {
 		margin-left: 0;
+	}
+	
+	#hdtb-msb > div:last-child {
+		margin-right: 16px;
 	}
 }
 }
